parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    SAG_KOSELI_PARANTEZ
    SOL_KOSELI_PARANTEZ

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     program -> empty
Rule 3     statement_list -> statement_list statement
Rule 4     statement_list -> statement
Rule 5     statement -> var_decl
Rule 6     statement -> func_decl
Rule 7     statement -> assignment_stmt
Rule 8     statement -> if_stmt
Rule 9     statement -> while_stmt
Rule 10    statement -> for_stmt
Rule 11    statement -> return_stmt
Rule 12    statement -> expr_stmt
Rule 13    statement -> blok
Rule 14    blok -> SOL_SUSLU_PARANTEZ statement_list SAG_SUSLU_PARANTEZ
Rule 15    blok -> SOL_SUSLU_PARANTEZ SAG_SUSLU_PARANTEZ
Rule 16    var_decl -> LET TANIMLAYICI ATAMA expression NOKTALI_VIRGUL
Rule 17    var_decl -> LET TANIMLAYICI NOKTALI_VIRGUL
Rule 18    func_decl -> DEF TANIMLAYICI SOL_PARANTEZ param_list SAG_PARANTEZ blok
Rule 19    param_list -> param_list VIRGUL TANIMLAYICI
Rule 20    param_list -> TANIMLAYICI
Rule 21    param_list -> empty
Rule 22    if_stmt -> IF SOL_PARANTEZ expression SAG_PARANTEZ blok
Rule 23    if_stmt -> IF SOL_PARANTEZ expression SAG_PARANTEZ blok ELSE blok
Rule 24    while_stmt -> WHILE SOL_PARANTEZ expression SAG_PARANTEZ blok
Rule 25    for_init -> var_decl
Rule 26    for_init -> assignment_stmt
Rule 27    for_stmt -> FOR SOL_PARANTEZ for_init expression NOKTALI_VIRGUL assignment SAG_PARANTEZ blok
Rule 28    return_stmt -> RETURN expression NOKTALI_VIRGUL
Rule 29    assignment_stmt -> assignment NOKTALI_VIRGUL
Rule 30    assignment -> TANIMLAYICI ATAMA expression
Rule 31    expr_stmt -> expression NOKTALI_VIRGUL
Rule 32    expression -> expression TOPLA expression
Rule 33    expression -> expression CIKAR expression
Rule 34    expression -> expression CARP expression
Rule 35    expression -> expression BOL expression
Rule 36    expression -> expression MODUL expression
Rule 37    expression -> expression ESIT expression
Rule 38    expression -> expression ESIT_DEGIL expression
Rule 39    expression -> expression KUCUK expression
Rule 40    expression -> expression BUYUK expression
Rule 41    expression -> expression KUCUK_ESIT expression
Rule 42    expression -> expression BUYUK_ESIT expression
Rule 43    expression -> expression VE expression
Rule 44    expression -> expression VEYA expression
Rule 45    expression -> CIKAR expression
Rule 46    expression -> DEGIL expression
Rule 47    expression -> SOL_PARANTEZ expression SAG_PARANTEZ
Rule 48    expression -> TANIMLAYICI SOL_PARANTEZ arg_list SAG_PARANTEZ
Rule 49    arg_list -> arg_list VIRGUL expression
Rule 50    arg_list -> expression
Rule 51    arg_list -> empty
Rule 52    expression -> TAMSAYI
Rule 53    expression -> ONDALIKLI
Rule 54    expression -> DOGRU
Rule 55    expression -> YANLIS
Rule 56    expression -> TANIMLAYICI
Rule 57    empty -> <empty>

Terminals, with rules where they appear

ATAMA                : 16 30
BOL                  : 35
BUYUK                : 40
BUYUK_ESIT           : 42
CARP                 : 34
CIKAR                : 33 45
DEF                  : 18
DEGIL                : 46
DOGRU                : 54
ELSE                 : 23
ESIT                 : 37
ESIT_DEGIL           : 38
FOR                  : 27
IF                   : 22 23
KUCUK                : 39
KUCUK_ESIT           : 41
LET                  : 16 17
MODUL                : 36
NOKTALI_VIRGUL       : 16 17 27 28 29 31
ONDALIKLI            : 53
RETURN               : 28
SAG_KOSELI_PARANTEZ  : 
SAG_PARANTEZ         : 18 22 23 24 27 47 48
SAG_SUSLU_PARANTEZ   : 14 15
SOL_KOSELI_PARANTEZ  : 
SOL_PARANTEZ         : 18 22 23 24 27 47 48
SOL_SUSLU_PARANTEZ   : 14 15
TAMSAYI              : 52
TANIMLAYICI          : 16 17 18 19 20 30 48 56
TOPLA                : 32
VE                   : 43
VEYA                 : 44
VIRGUL               : 19 49
WHILE                : 24
YANLIS               : 55
error                : 

Nonterminals, with rules where they appear

arg_list             : 48 49
assignment           : 27 29
assignment_stmt      : 7 26
blok                 : 13 18 22 23 23 24 27
empty                : 2 21 51
expr_stmt            : 12
expression           : 16 22 23 24 27 28 30 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 46 47 49 50
for_init             : 27
for_stmt             : 10
func_decl            : 6
if_stmt              : 8
param_list           : 18 19
program              : 0
return_stmt          : 11
statement            : 3 4
statement_list       : 1 3 14
var_decl             : 5 25
while_stmt           : 9

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) program -> . empty
    (3) statement_list -> . statement_list statement
    (4) statement_list -> . statement
    (57) empty -> .
    (5) statement -> . var_decl
    (6) statement -> . func_decl
    (7) statement -> . assignment_stmt
    (8) statement -> . if_stmt
    (9) statement -> . while_stmt
    (10) statement -> . for_stmt
    (11) statement -> . return_stmt
    (12) statement -> . expr_stmt
    (13) statement -> . blok
    (16) var_decl -> . LET TANIMLAYICI ATAMA expression NOKTALI_VIRGUL
    (17) var_decl -> . LET TANIMLAYICI NOKTALI_VIRGUL
    (18) func_decl -> . DEF TANIMLAYICI SOL_PARANTEZ param_list SAG_PARANTEZ blok
    (29) assignment_stmt -> . assignment NOKTALI_VIRGUL
    (22) if_stmt -> . IF SOL_PARANTEZ expression SAG_PARANTEZ blok
    (23) if_stmt -> . IF SOL_PARANTEZ expression SAG_PARANTEZ blok ELSE blok
    (24) while_stmt -> . WHILE SOL_PARANTEZ expression SAG_PARANTEZ blok
    (27) for_stmt -> . FOR SOL_PARANTEZ for_init expression NOKTALI_VIRGUL assignment SAG_PARANTEZ blok
    (28) return_stmt -> . RETURN expression NOKTALI_VIRGUL
    (31) expr_stmt -> . expression NOKTALI_VIRGUL
    (14) blok -> . SOL_SUSLU_PARANTEZ statement_list SAG_SUSLU_PARANTEZ
    (15) blok -> . SOL_SUSLU_PARANTEZ SAG_SUSLU_PARANTEZ
    (30) assignment -> . TANIMLAYICI ATAMA expression
    (32) expression -> . expression TOPLA expression
    (33) expression -> . expression CIKAR expression
    (34) expression -> . expression CARP expression
    (35) expression -> . expression BOL expression
    (36) expression -> . expression MODUL expression
    (37) expression -> . expression ESIT expression
    (38) expression -> . expression ESIT_DEGIL expression
    (39) expression -> . expression KUCUK expression
    (40) expression -> . expression BUYUK expression
    (41) expression -> . expression KUCUK_ESIT expression
    (42) expression -> . expression BUYUK_ESIT expression
    (43) expression -> . expression VE expression
    (44) expression -> . expression VEYA expression
    (45) expression -> . CIKAR expression
    (46) expression -> . DEGIL expression
    (47) expression -> . SOL_PARANTEZ expression SAG_PARANTEZ
    (48) expression -> . TANIMLAYICI SOL_PARANTEZ arg_list SAG_PARANTEZ
    (52) expression -> . TAMSAYI
    (53) expression -> . ONDALIKLI
    (54) expression -> . DOGRU
    (55) expression -> . YANLIS
    (56) expression -> . TANIMLAYICI

    $end            reduce using rule 57 (empty -> .)
    LET             shift and go to state 14
    DEF             shift and go to state 17
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    FOR             shift and go to state 22
    RETURN          shift and go to state 23
    SOL_SUSLU_PARANTEZ shift and go to state 24
    TANIMLAYICI     shift and go to state 15
    CIKAR           shift and go to state 25
    DEGIL           shift and go to state 26
    SOL_PARANTEZ    shift and go to state 18
    TAMSAYI         shift and go to state 27
    ONDALIKLI       shift and go to state 28
    DOGRU           shift and go to state 29
    YANLIS          shift and go to state 30

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    empty                          shift and go to state 3
    statement                      shift and go to state 4
    var_decl                       shift and go to state 5
    func_decl                      shift and go to state 6
    assignment_stmt                shift and go to state 7
    if_stmt                        shift and go to state 8
    while_stmt                     shift and go to state 9
    for_stmt                       shift and go to state 10
    return_stmt                    shift and go to state 11
    expr_stmt                      shift and go to state 12
    blok                           shift and go to state 13
    expression                     shift and go to state 16
    assignment                     shift and go to state 19

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (3) statement_list -> statement_list . statement
    (5) statement -> . var_decl
    (6) statement -> . func_decl
    (7) statement -> . assignment_stmt
    (8) statement -> . if_stmt
    (9) statement -> . while_stmt
    (10) statement -> . for_stmt
    (11) statement -> . return_stmt
    (12) statement -> . expr_stmt
    (13) statement -> . blok
    (16) var_decl -> . LET TANIMLAYICI ATAMA expression NOKTALI_VIRGUL
    (17) var_decl -> . LET TANIMLAYICI NOKTALI_VIRGUL
    (18) func_decl -> . DEF TANIMLAYICI SOL_PARANTEZ param_list SAG_PARANTEZ blok
    (29) assignment_stmt -> . assignment NOKTALI_VIRGUL
    (22) if_stmt -> . IF SOL_PARANTEZ expression SAG_PARANTEZ blok
    (23) if_stmt -> . IF SOL_PARANTEZ expression SAG_PARANTEZ blok ELSE blok
    (24) while_stmt -> . WHILE SOL_PARANTEZ expression SAG_PARANTEZ blok
    (27) for_stmt -> . FOR SOL_PARANTEZ for_init expression NOKTALI_VIRGUL assignment SAG_PARANTEZ blok
    (28) return_stmt -> . RETURN expression NOKTALI_VIRGUL
    (31) expr_stmt -> . expression NOKTALI_VIRGUL
    (14) blok -> . SOL_SUSLU_PARANTEZ statement_list SAG_SUSLU_PARANTEZ
    (15) blok -> . SOL_SUSLU_PARANTEZ SAG_SUSLU_PARANTEZ
    (30) assignment -> . TANIMLAYICI ATAMA expression
    (32) expression -> . expression TOPLA expression
    (33) expression -> . expression CIKAR expression
    (34) expression -> . expression CARP expression
    (35) expression -> . expression BOL expression
    (36) expression -> . expression MODUL expression
    (37) expression -> . expression ESIT expression
    (38) expression -> . expression ESIT_DEGIL expression
    (39) expression -> . expression KUCUK expression
    (40) expression -> . expression BUYUK expression
    (41) expression -> . expression KUCUK_ESIT expression
    (42) expression -> . expression BUYUK_ESIT expression
    (43) expression -> . expression VE expression
    (44) expression -> . expression VEYA expression
    (45) expression -> . CIKAR expression
    (46) expression -> . DEGIL expression
    (47) expression -> . SOL_PARANTEZ expression SAG_PARANTEZ
    (48) expression -> . TANIMLAYICI SOL_PARANTEZ arg_list SAG_PARANTEZ
    (52) expression -> . TAMSAYI
    (53) expression -> . ONDALIKLI
    (54) expression -> . DOGRU
    (55) expression -> . YANLIS
    (56) expression -> . TANIMLAYICI

    $end            reduce using rule 1 (program -> statement_list .)
    LET             shift and go to state 14
    DEF             shift and go to state 17
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    FOR             shift and go to state 22
    RETURN          shift and go to state 23
    SOL_SUSLU_PARANTEZ shift and go to state 24
    TANIMLAYICI     shift and go to state 15
    CIKAR           shift and go to state 25
    DEGIL           shift and go to state 26
    SOL_PARANTEZ    shift and go to state 18
    TAMSAYI         shift and go to state 27
    ONDALIKLI       shift and go to state 28
    DOGRU           shift and go to state 29
    YANLIS          shift and go to state 30

    statement                      shift and go to state 31
    var_decl                       shift and go to state 5
    func_decl                      shift and go to state 6
    assignment_stmt                shift and go to state 7
    if_stmt                        shift and go to state 8
    while_stmt                     shift and go to state 9
    for_stmt                       shift and go to state 10
    return_stmt                    shift and go to state 11
    expr_stmt                      shift and go to state 12
    blok                           shift and go to state 13
    expression                     shift and go to state 16
    assignment                     shift and go to state 19

state 3

    (2) program -> empty .

    $end            reduce using rule 2 (program -> empty .)


state 4

    (4) statement_list -> statement .

    LET             reduce using rule 4 (statement_list -> statement .)
    DEF             reduce using rule 4 (statement_list -> statement .)
    IF              reduce using rule 4 (statement_list -> statement .)
    WHILE           reduce using rule 4 (statement_list -> statement .)
    FOR             reduce using rule 4 (statement_list -> statement .)
    RETURN          reduce using rule 4 (statement_list -> statement .)
    SOL_SUSLU_PARANTEZ reduce using rule 4 (statement_list -> statement .)
    TANIMLAYICI     reduce using rule 4 (statement_list -> statement .)
    CIKAR           reduce using rule 4 (statement_list -> statement .)
    DEGIL           reduce using rule 4 (statement_list -> statement .)
    SOL_PARANTEZ    reduce using rule 4 (statement_list -> statement .)
    TAMSAYI         reduce using rule 4 (statement_list -> statement .)
    ONDALIKLI       reduce using rule 4 (statement_list -> statement .)
    DOGRU           reduce using rule 4 (statement_list -> statement .)
    YANLIS          reduce using rule 4 (statement_list -> statement .)
    $end            reduce using rule 4 (statement_list -> statement .)
    SAG_SUSLU_PARANTEZ reduce using rule 4 (statement_list -> statement .)


state 5

    (5) statement -> var_decl .

    LET             reduce using rule 5 (statement -> var_decl .)
    DEF             reduce using rule 5 (statement -> var_decl .)
    IF              reduce using rule 5 (statement -> var_decl .)
    WHILE           reduce using rule 5 (statement -> var_decl .)
    FOR             reduce using rule 5 (statement -> var_decl .)
    RETURN          reduce using rule 5 (statement -> var_decl .)
    SOL_SUSLU_PARANTEZ reduce using rule 5 (statement -> var_decl .)
    TANIMLAYICI     reduce using rule 5 (statement -> var_decl .)
    CIKAR           reduce using rule 5 (statement -> var_decl .)
    DEGIL           reduce using rule 5 (statement -> var_decl .)
    SOL_PARANTEZ    reduce using rule 5 (statement -> var_decl .)
    TAMSAYI         reduce using rule 5 (statement -> var_decl .)
    ONDALIKLI       reduce using rule 5 (statement -> var_decl .)
    DOGRU           reduce using rule 5 (statement -> var_decl .)
    YANLIS          reduce using rule 5 (statement -> var_decl .)
    $end            reduce using rule 5 (statement -> var_decl .)
    SAG_SUSLU_PARANTEZ reduce using rule 5 (statement -> var_decl .)


state 6

    (6) statement -> func_decl .

    LET             reduce using rule 6 (statement -> func_decl .)
    DEF             reduce using rule 6 (statement -> func_decl .)
    IF              reduce using rule 6 (statement -> func_decl .)
    WHILE           reduce using rule 6 (statement -> func_decl .)
    FOR             reduce using rule 6 (statement -> func_decl .)
    RETURN          reduce using rule 6 (statement -> func_decl .)
    SOL_SUSLU_PARANTEZ reduce using rule 6 (statement -> func_decl .)
    TANIMLAYICI     reduce using rule 6 (statement -> func_decl .)
    CIKAR           reduce using rule 6 (statement -> func_decl .)
    DEGIL           reduce using rule 6 (statement -> func_decl .)
    SOL_PARANTEZ    reduce using rule 6 (statement -> func_decl .)
    TAMSAYI         reduce using rule 6 (statement -> func_decl .)
    ONDALIKLI       reduce using rule 6 (statement -> func_decl .)
    DOGRU           reduce using rule 6 (statement -> func_decl .)
    YANLIS          reduce using rule 6 (statement -> func_decl .)
    $end            reduce using rule 6 (statement -> func_decl .)
    SAG_SUSLU_PARANTEZ reduce using rule 6 (statement -> func_decl .)


state 7

    (7) statement -> assignment_stmt .

    LET             reduce using rule 7 (statement -> assignment_stmt .)
    DEF             reduce using rule 7 (statement -> assignment_stmt .)
    IF              reduce using rule 7 (statement -> assignment_stmt .)
    WHILE           reduce using rule 7 (statement -> assignment_stmt .)
    FOR             reduce using rule 7 (statement -> assignment_stmt .)
    RETURN          reduce using rule 7 (statement -> assignment_stmt .)
    SOL_SUSLU_PARANTEZ reduce using rule 7 (statement -> assignment_stmt .)
    TANIMLAYICI     reduce using rule 7 (statement -> assignment_stmt .)
    CIKAR           reduce using rule 7 (statement -> assignment_stmt .)
    DEGIL           reduce using rule 7 (statement -> assignment_stmt .)
    SOL_PARANTEZ    reduce using rule 7 (statement -> assignment_stmt .)
    TAMSAYI         reduce using rule 7 (statement -> assignment_stmt .)
    ONDALIKLI       reduce using rule 7 (statement -> assignment_stmt .)
    DOGRU           reduce using rule 7 (statement -> assignment_stmt .)
    YANLIS          reduce using rule 7 (statement -> assignment_stmt .)
    $end            reduce using rule 7 (statement -> assignment_stmt .)
    SAG_SUSLU_PARANTEZ reduce using rule 7 (statement -> assignment_stmt .)


state 8

    (8) statement -> if_stmt .

    LET             reduce using rule 8 (statement -> if_stmt .)
    DEF             reduce using rule 8 (statement -> if_stmt .)
    IF              reduce using rule 8 (statement -> if_stmt .)
    WHILE           reduce using rule 8 (statement -> if_stmt .)
    FOR             reduce using rule 8 (statement -> if_stmt .)
    RETURN          reduce using rule 8 (statement -> if_stmt .)
    SOL_SUSLU_PARANTEZ reduce using rule 8 (statement -> if_stmt .)
    TANIMLAYICI     reduce using rule 8 (statement -> if_stmt .)
    CIKAR           reduce using rule 8 (statement -> if_stmt .)
    DEGIL           reduce using rule 8 (statement -> if_stmt .)
    SOL_PARANTEZ    reduce using rule 8 (statement -> if_stmt .)
    TAMSAYI         reduce using rule 8 (statement -> if_stmt .)
    ONDALIKLI       reduce using rule 8 (statement -> if_stmt .)
    DOGRU           reduce using rule 8 (statement -> if_stmt .)
    YANLIS          reduce using rule 8 (statement -> if_stmt .)
    $end            reduce using rule 8 (statement -> if_stmt .)
    SAG_SUSLU_PARANTEZ reduce using rule 8 (statement -> if_stmt .)


state 9

    (9) statement -> while_stmt .

    LET             reduce using rule 9 (statement -> while_stmt .)
    DEF             reduce using rule 9 (statement -> while_stmt .)
    IF              reduce using rule 9 (statement -> while_stmt .)
    WHILE           reduce using rule 9 (statement -> while_stmt .)
    FOR             reduce using rule 9 (statement -> while_stmt .)
    RETURN          reduce using rule 9 (statement -> while_stmt .)
    SOL_SUSLU_PARANTEZ reduce using rule 9 (statement -> while_stmt .)
    TANIMLAYICI     reduce using rule 9 (statement -> while_stmt .)
    CIKAR           reduce using rule 9 (statement -> while_stmt .)
    DEGIL           reduce using rule 9 (statement -> while_stmt .)
    SOL_PARANTEZ    reduce using rule 9 (statement -> while_stmt .)
    TAMSAYI         reduce using rule 9 (statement -> while_stmt .)
    ONDALIKLI       reduce using rule 9 (statement -> while_stmt .)
    DOGRU           reduce using rule 9 (statement -> while_stmt .)
    YANLIS          reduce using rule 9 (statement -> while_stmt .)
    $end            reduce using rule 9 (statement -> while_stmt .)
    SAG_SUSLU_PARANTEZ reduce using rule 9 (statement -> while_stmt .)


state 10

    (10) statement -> for_stmt .

    LET             reduce using rule 10 (statement -> for_stmt .)
    DEF             reduce using rule 10 (statement -> for_stmt .)
    IF              reduce using rule 10 (statement -> for_stmt .)
    WHILE           reduce using rule 10 (statement -> for_stmt .)
    FOR             reduce using rule 10 (statement -> for_stmt .)
    RETURN          reduce using rule 10 (statement -> for_stmt .)
    SOL_SUSLU_PARANTEZ reduce using rule 10 (statement -> for_stmt .)
    TANIMLAYICI     reduce using rule 10 (statement -> for_stmt .)
    CIKAR           reduce using rule 10 (statement -> for_stmt .)
    DEGIL           reduce using rule 10 (statement -> for_stmt .)
    SOL_PARANTEZ    reduce using rule 10 (statement -> for_stmt .)
    TAMSAYI         reduce using rule 10 (statement -> for_stmt .)
    ONDALIKLI       reduce using rule 10 (statement -> for_stmt .)
    DOGRU           reduce using rule 10 (statement -> for_stmt .)
    YANLIS          reduce using rule 10 (statement -> for_stmt .)
    $end            reduce using rule 10 (statement -> for_stmt .)
    SAG_SUSLU_PARANTEZ reduce using rule 10 (statement -> for_stmt .)


state 11

    (11) statement -> return_stmt .

    LET             reduce using rule 11 (statement -> return_stmt .)
    DEF             reduce using rule 11 (statement -> return_stmt .)
    IF              reduce using rule 11 (statement -> return_stmt .)
    WHILE           reduce using rule 11 (statement -> return_stmt .)
    FOR             reduce using rule 11 (statement -> return_stmt .)
    RETURN          reduce using rule 11 (statement -> return_stmt .)
    SOL_SUSLU_PARANTEZ reduce using rule 11 (statement -> return_stmt .)
    TANIMLAYICI     reduce using rule 11 (statement -> return_stmt .)
    CIKAR           reduce using rule 11 (statement -> return_stmt .)
    DEGIL           reduce using rule 11 (statement -> return_stmt .)
    SOL_PARANTEZ    reduce using rule 11 (statement -> return_stmt .)
    TAMSAYI         reduce using rule 11 (statement -> return_stmt .)
    ONDALIKLI       reduce using rule 11 (statement -> return_stmt .)
    DOGRU           reduce using rule 11 (statement -> return_stmt .)
    YANLIS          reduce using rule 11 (statement -> return_stmt .)
    $end            reduce using rule 11 (statement -> return_stmt .)
    SAG_SUSLU_PARANTEZ reduce using rule 11 (statement -> return_stmt .)


state 12

    (12) statement -> expr_stmt .

    LET             reduce using rule 12 (statement -> expr_stmt .)
    DEF             reduce using rule 12 (statement -> expr_stmt .)
    IF              reduce using rule 12 (statement -> expr_stmt .)
    WHILE           reduce using rule 12 (statement -> expr_stmt .)
    FOR             reduce using rule 12 (statement -> expr_stmt .)
    RETURN          reduce using rule 12 (statement -> expr_stmt .)
    SOL_SUSLU_PARANTEZ reduce using rule 12 (statement -> expr_stmt .)
    TANIMLAYICI     reduce using rule 12 (statement -> expr_stmt .)
    CIKAR           reduce using rule 12 (statement -> expr_stmt .)
    DEGIL           reduce using rule 12 (statement -> expr_stmt .)
    SOL_PARANTEZ    reduce using rule 12 (statement -> expr_stmt .)
    TAMSAYI         reduce using rule 12 (statement -> expr_stmt .)
    ONDALIKLI       reduce using rule 12 (statement -> expr_stmt .)
    DOGRU           reduce using rule 12 (statement -> expr_stmt .)
    YANLIS          reduce using rule 12 (statement -> expr_stmt .)
    $end            reduce using rule 12 (statement -> expr_stmt .)
    SAG_SUSLU_PARANTEZ reduce using rule 12 (statement -> expr_stmt .)


state 13

    (13) statement -> blok .

    LET             reduce using rule 13 (statement -> blok .)
    DEF             reduce using rule 13 (statement -> blok .)
    IF              reduce using rule 13 (statement -> blok .)
    WHILE           reduce using rule 13 (statement -> blok .)
    FOR             reduce using rule 13 (statement -> blok .)
    RETURN          reduce using rule 13 (statement -> blok .)
    SOL_SUSLU_PARANTEZ reduce using rule 13 (statement -> blok .)
    TANIMLAYICI     reduce using rule 13 (statement -> blok .)
    CIKAR           reduce using rule 13 (statement -> blok .)
    DEGIL           reduce using rule 13 (statement -> blok .)
    SOL_PARANTEZ    reduce using rule 13 (statement -> blok .)
    TAMSAYI         reduce using rule 13 (statement -> blok .)
    ONDALIKLI       reduce using rule 13 (statement -> blok .)
    DOGRU           reduce using rule 13 (statement -> blok .)
    YANLIS          reduce using rule 13 (statement -> blok .)
    $end            reduce using rule 13 (statement -> blok .)
    SAG_SUSLU_PARANTEZ reduce using rule 13 (statement -> blok .)


state 14

    (16) var_decl -> LET . TANIMLAYICI ATAMA expression NOKTALI_VIRGUL
    (17) var_decl -> LET . TANIMLAYICI NOKTALI_VIRGUL

    TANIMLAYICI     shift and go to state 32


state 15

    (30) assignment -> TANIMLAYICI . ATAMA expression
    (48) expression -> TANIMLAYICI . SOL_PARANTEZ arg_list SAG_PARANTEZ
    (56) expression -> TANIMLAYICI .

    ATAMA           shift and go to state 33
    SOL_PARANTEZ    shift and go to state 34
    NOKTALI_VIRGUL  reduce using rule 56 (expression -> TANIMLAYICI .)
    TOPLA           reduce using rule 56 (expression -> TANIMLAYICI .)
    CIKAR           reduce using rule 56 (expression -> TANIMLAYICI .)
    CARP            reduce using rule 56 (expression -> TANIMLAYICI .)
    BOL             reduce using rule 56 (expression -> TANIMLAYICI .)
    MODUL           reduce using rule 56 (expression -> TANIMLAYICI .)
    ESIT            reduce using rule 56 (expression -> TANIMLAYICI .)
    ESIT_DEGIL      reduce using rule 56 (expression -> TANIMLAYICI .)
    KUCUK           reduce using rule 56 (expression -> TANIMLAYICI .)
    BUYUK           reduce using rule 56 (expression -> TANIMLAYICI .)
    KUCUK_ESIT      reduce using rule 56 (expression -> TANIMLAYICI .)
    BUYUK_ESIT      reduce using rule 56 (expression -> TANIMLAYICI .)
    VE              reduce using rule 56 (expression -> TANIMLAYICI .)
    VEYA            reduce using rule 56 (expression -> TANIMLAYICI .)


state 16
